tests/indexed_access_not_enabled/indexed_access_not_enabled.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:15

Indexed Access is not enabled. You may enable it by adding `indexed_access=true` to the `[options]` section of your
`.flowconfig`. [indexed-access-off]

   5| type ObjFoo = Obj['foo']; // Error
                    ^^^^^^^^^^



Found 1 error
